5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1602_1017.log
== TEST (2019-03-24 18:15:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("-3.130601: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:15:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = math.radians(float(input("-3.130601: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = math.radians(float(input()))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:59:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
d=R.arccos * (sin(lat1).sin(lat2)+cos(lat1).cos(lat2).cos(long1-long2))
R = 6371,01 km
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:00:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
D = R.arccos * (sin(lat1).sin(lat2)+cos(lat1).cos(lat2).cos(long1-long2))
R = 6371,01 km
print(round(D, 2))
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:01:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
D = R.arccos * (sin(lat1).sin(lat2)+cos(lat1).cos(lat2).cos(long1-long2))
R = 6371.01 
print(round(D, 2))
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:02:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
D = R.arccos * (sin(lat1).sin(lat2)+cos(lat1).cos(lat2).cos(long1-long2))
print(round(D, 2))
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:03:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
D = R.acos() * (sin(lat1).sin(lat2)+cos(lat1).cos(lat2).cos(long1-long2))
print(round(D, 2))
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:04:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
D = R.arccos * (sin(lat1).sin(lat2)+cos(lat1).cos(lat2).cos(long1-long2))
print(round(D, 2))
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:06:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(D, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
TypeError: acos() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:06:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(D, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
TypeError: acos() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:06:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(D, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
TypeError: acos() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:06:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(D, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
TypeError: acos() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:06:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(D, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
TypeError: acos() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:06:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(D, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
TypeError: acos() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:06:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(D, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
TypeError: acos() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:06:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(D, 2))
-- EXECUTION TIME:
0.121438
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 10, in <module>
    D = R*acos() * (sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
TypeError: acos() takes exactly one argument (0 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:07:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
D = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(D, 2))
-- EXECUTION TIME:
0.152759
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 10, in <module>
    D = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
NameError: name 'lat1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:07:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
NameError: name 'lat1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:07:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- EXECUTION TIME:
0.226657
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 10, in <module>
    d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
NameError: name 'lat1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:07:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- EXECUTION TIME:
0.15217
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 10, in <module>
    d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
NameError: name 'lat1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:07:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- EXECUTION TIME:
0.220309
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 10, in <module>
    d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
NameError: name 'lat1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:07:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- EXECUTION TIME:
0.16153
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 10, in <module>
    d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
NameError: name 'lat1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:07:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
NameError: name 'lat1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:07:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- EXECUTION TIME:
0.120454
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 10, in <module>
    d = R*acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
NameError: name 'lat1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:08:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
latitude1 = radians(float(input("Latitude de P1: ")))
longitude1 = radians(float(input("Latitude de P1: ")))
latitude2 = radians(float(input("Latitude de P2: ")))
longitude2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R * acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
NameError: name 'lat1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:09:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:09:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- EXECUTION TIME:
0.142653
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:17:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- EXECUTION TIME:
0.142911
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 17:56:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- EXECUTION TIME:
0.230262
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:51:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1)*sin(lat2)+cos(lat1)*cos(lat2)*cos(long1-long2))
print(round(d, 2))
-- EXECUTION TIME:
0.142548
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
